corrected a comment and commented out some non functioning code

--- a/configtemplate.ini
+++ b/configtemplate.ini
@@ -1,3 +1,3 @@
 [bot]
 discordbottoken = #put your discord provided keyboard smash here
-;rename this file to secretconfig
+;rename this file to config.ini
