--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,13 +19,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12.5
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: "3.12.5"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install discord.py
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
